--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/SamGJohn/pupeteer-test/issues"
   },
-  "homepage": "https://github.com/SamGJohn/pupeteer-test#readme"
+  "homepage": "https://github.com/SamGJohn/pupeteer-test#readme",
+  "dependencies": {
+    "puppeteer": "^5.3.1"
+  }
 }
