--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/SamGJohn/pupeteer-test#readme",
   "dependencies": {
-    "puppeteer": "^5.3.1"
+    "puppeteer": "^5.3.1",
+    "react-helmet": "^6.1.0"
   }
 }
